kubernetes/media/jellystat/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellystat
  namespace: media
spec:
  serviceName: "jellystat"
  replicas: 1
  selector:
    matchLabels:
      app: jellystat
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      automountServiceAccountToken: false
      containers:
        # Container
        - name: jellystat
          image: cyfershepard/jellystat:1.1.9
          # Resources
          resources:
            requests:
              cpu: 50m
              memory: 1Gi
              ephemeral-storage: 8Gi
            limits:
              cpu: 100m
              memory: 1Gi
              ephemeral-storage: 8Gi
          ports:
            - name: jellystat-http
              containerPort: 3000
              protocol: TCP
          # Volume Mounts
          volumeMounts:
            - name: jellystat-backup-data
              mountPath: /app/backend/backup-data
  volumeClaimTemplates:
    - metadata:
        name: jellystat-backup-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
