kubernetes/media/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: media
  labels:
    app: jellystat
spec:
  selector:
    app: jellystat
  ports:
    - port: 3000
      name: jellystat
