kubernetes/media/jellystat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - jellystat.mcmumf.dev
      secretName: jellystat.mcmumf.dev-tls
  rules:
    - host: jellystat.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellystat
                port:
                  number: 3000
